DevTools: Fix debugger stepping order in workers.

BUG=911901

Change-Id: I9f8626f43a95d6dd428d9850f72d910fe62583c4
Reviewed-on: https://chromium-review.googlesource.com/c/1363211
Commit-Queue: Alexei Filippov <alph@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614933}
Former-commit-id: 80d1f9a53edb2cd5aea5807589c83f4b0b84607e