third_party/blink/renderer/core/workers/worker_global_scope.h
@@ -204,6 +204,8 @@ class CORE_EXPORT WorkerGlobalScope
 
   void AddPausedCall(base::OnceClosure closure);
 
+  void MaybeRunPausedTasks();
+
   mojom::ScriptType GetScriptType() const { return script_type_; }
 
  private:
